--- a/Hive/1. Hive的安装与配置.md
+++ b/Hive/1. Hive的安装与配置.md
@@ -243,6 +243,17 @@
    ```
 
    解决方法：MySQL连接的URL不能使用 `&` 字符，需要使用转义符 `&amp;` 替代。
+   
+6. 当运行`schematool -dbType mysql -initSchema ` 命令时，发现如下报错：
+
+   ```bash
+   Error: Table 'CTLGS' already exists (state=42S01,code=1050)
+   org.apache.hadoop.hive.metastore.HiveMetaException: Schema initialization FAILED! Metastore state would be inconsistent !!
+   Underlying cause: java.io.IOException : Schema script failed, errorcode 2
+   Use --verbose for detailed stacktrace.
+   ```
+
+   说明mysql中这个数据库已经存在了，可以考虑删除这个数据库重新运行上面的语句，也可以不运行上面的语句，直接运行Hive。
 
 ### 参考文章
 
